backend/deploy/tests/manifests/authenservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentservice
  namespace: deployments
spec:
  type: LoadBalancer
  selector:
    app: authentservice
  ports:
    - name: http
      port: 80
      targetPort: 50051
