backend/deploy/tests/manifests/authentservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentservice-deployment
  namespace: deployments
  labels:
    app: authentservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentservice
  template:
    metadata:
      labels:
        app: authentservice
    spec:
      containers:
        - name: server
          image: gcr.io/focus-vim-448513-a1/authentservice:latest
          ports:
            - containerPort: 50051
          envFrom:
            - secretRef:
                name: authservice-secrets
          resources:
            requests:
              cpu: '250m'
              memory: '256Mi'
            limits:
              cpu: '500m'
              memory: '512Mi'
          readinessProbe:
            httpGet:
              path: /health
              port: 50051
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 50051
            initialDelaySeconds: 15
            periodSeconds: 20
